--- a/pages/hao/index.html
+++ b/pages/hao/index.html
@@ -555,7 +555,7 @@
         <button class="drawer-close-btn"><i class="fas fa-times"></i></button>
 
         <div class="nav-header">
-            <img src="https://via.placeholder.com/180x60/FF8C19/FFFFFF?text=Logo" alt="Logo" class="logo">
+            <img src="logo.svg" alt="Logo" class="logo">
         </div>
 
         <div class="primary-categories">
