--- a/pages/11.html
+++ b/pages/11.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -882,7 +883,7 @@
                 });
             }
 
-            const newCardImageUrl = "https://gd-hbimg.huaban.com/9bd893bc8f24adeb484c0cbd9d3ba5a68faa4bbeafa1b-6vmjdu";
+            const newCardImageUrl = "https://tc.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250702/7gfe/1761X987/9bd893bc8f24adeb484c0cbd9d3ba5a68faa4bbeafa1b-6vmjdu.jpg";
 
             const allCardData = [
                 { title: "技术创新", description: "探索最新的技术突破和创新应用，改变世界的未来。从人工智能到生物科技，每一次飞跃都在重塑我们的生活方式。", tag: "科技",
