--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>字造Type ｜ 让每个想法，轻松成字</title>
+    <title>字造Type - 让每个想法，轻松成字</title>
+    <meta name="description" content="字造产品展示，提供优质的字库产品和设计资源。了解更多关于字造的信息。">
+    <meta name="keywords" content="字造, 字库, 字体设计, 设计导航，设计工具">
+    <meta name="author" content="字造">
+    <meta property="og:title" content="字造 - 专注分享字体领域优质内容">
+    <meta property="og:description" content="字造工具箱，提供优质的字库产品和设计资源。了解更多关于字造的信息。">
+    <meta property="og:image" content="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/9BXx/1108X308/logo.png">
+    <meta property="og:url" content="https://www.zizao.top">
+    <meta property="og:type" content="website">
+    <link rel="icon" href="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/gOQi/ico.ico" type="zizaoicon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* 全局样式 */
@@ -675,7 +684,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="#top" class="logo">
-                <img src="logo.png" alt="公司Logo" class="logo-image">
+                <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/9BXx/1108X308/logo.png" alt="字造Logo" class="logo-image">
             </a>
             
             <div class="menu-toggle" id="menuToggle">
@@ -1055,11 +1064,10 @@
             </div>
 
             <div class="footer-links">
-                <a href="https://example.com/design-cooperation" target="_blank">设计合作</a>
-                <a href="https://example.com/contact-us" target="_blank">联系我们</a>
-                <a href="https://example.com/privacy-policy" target="_blank">隐私政策</a>
-                <a href="https://example.com/terms-of-service" target="_blank">服务条款</a>
-                <a href="https://example.com/terms-of-service" target="_blank">服务条款</a>
+                <a href="#" target="_blank">设计合作</a>
+                <a href="#" target="_blank">联系我们</a>
+                <a href="#" target="_blank">隐私政策</a>
+                <a href="#" target="_blank">服务条款</a>
             </div>
             <div class="copyright">
                 <p>&copy; 2025 ZIZAO.TOP. 保留所有权利.</p>
